# Exodus_Autonomy

./: README.md  TODOs.md  package-lock.json
.github/workflows/: ci.yml
docker/: Dockerfile.jetson
mobility_ctrl/: .claudeignore  .gitignore  JETSON_DEPLOYMENT.md  NAVIGATION_SETUP.md  SESSION_LOG.md  TEAM_TASKS.md  frames_2025-12-25_12.57.27.gv
mobility_ctrl/config/: costmap_params.yaml  multi_camera_config.yaml
mobility_ctrl/launch/: costmap_bringup.launch.py
mobility_ctrl/src/autonomy_node/: AUTONOMY_SETUP.md  package.xml  setup.cfg  setup.py
mobility_ctrl/src/autonomy_node/autonomy_node/: __init__.py  camera_subscriber.py  costmap_listener.py  detector_3cam.py  grid_mapper_3cam.py  odom_fusion.py  path_planner.py
mobility_ctrl/src/autonomy_node/launch/: autonomy_system.launch.py
mobility_ctrl/src/autonomy_node/scripts/: verify_system.sh
mobility_ctrl/src/exodus_interfaces/: CMakeLists.txt  package.xml
mobility_ctrl/src/exodus_interfaces/msg/: Obstacle.msg  ObstacleDetection.msg
mobility_ctrl/src/follow_waypoints/follow_waypoints/: follow_waypoints.py
mobility_ctrl/src/multi_zed_rtab/: setup.py
mobility_ctrl/src/multi_zed_rtab/config/: costmap_params.yaml  multi_camera_config.yaml  nav2_params.yaml
mobility_ctrl/src/multi_zed_rtab/launch/: costmap_bringup.launch.py  multi_zed_rtab.launch.py  real_nav.launch.py
mobility_ctrl/src/multi_zed_rtab/multi_zed_rtab/: cost_generator_node.py
mobility_ctrl/src/nav2_stanley/: setup.py
mobility_ctrl/src/nav2_stanley/config/: ekf.yaml  navigation.yaml
mobility_ctrl/src/nav2_stanley/urdf/: ack_rover_gazebo.xacro.urdf  zed_cameras.xacro.urdf
src/exodus_mission_manager/: package.xml  setup.py
src/exodus_mission_manager/exodus_mission_manager/: mission_manager_node.py
src/exodus_navigation/: package.xml  setup.py  yolo_detector.py
src/exodus_navigation/launch/: mapping_launch.py  navigation_launch.py  slam_launch.py
src/exodus_navigation/params/: nav2_params.yaml
src/exodus_perception/: package.xml  setup.py
src/exodus_perception/exodus_perception/: perception_node.py
